# rpi-pico-zephyr-exploration

./: CMakeLists.txt  README-SECONDARY.rst  README.rst  prj.conf  west.yml
boards/: rpi_pico.overlay
doc/: design-notes.txt  pico-sdk-adapted-uart-sample-output.txt
include/: commands.h  development-defines.h  diagnostics.h  thread-hello-dma.h  thread-simple-cli.h  thread-uart-advanced.h  uart-advanced.h
src/: commands.c  development-defines.h  diagnostics.c  local_rpi_platform.h  local_rpi_platform_base.c  local_rpi_platform_base.h  main.c  thread-hello-dma.c  thread-hello-dma.h  thread-led.c  thread-simple-cli.c  thread-uart-advanced.c  uart_advanced.c
